# agentic-agile

./: .gitignore  CHANGELOG.md  DEVLOG.md  Makefile  README.md
.claude-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN.md  KICKSTART.md  PLATFORM-NOTES.md  agentic-agile-design.html
docs/diagrams/: end-to-end-flow.mmd  gen_architecture.py
plugin/: README.md  STRUCTURE.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: archivist.md  final-gate.md  green-worker.md  intake.md  planner.md  red-worker.md  scaffolder.md  standards.md  structural-reviewer.md
plugin/evals/: README.md
plugin/evals/agents/: archivist.json  final-gate.json  green-worker.json  intake.json  planner.json  red-worker.json  scaffolder.json  standards.json  structural-reviewer.json
plugin/hooks/: hooks.json
plugin/pipeline/execution/00-red/: artifacts.md  gate.md  init.template.md  persona.md
plugin/pipeline/execution/01-scaffold/: artifacts.md  gate.md  init.template.md  persona.md
plugin/schemas/: SCHEMA-NOTES.md  agent-io.kdl  ledger.kdl  memory.kdl  planning-artifacts.kdl
plugin/skills/agentic-agile/: SKILL.md
plugin/skills/init/: SKILL.md
plugin/tools/: install.sh
plugin/tools/ctx-symbols/: Cargo.toml  README.md
plugin/tools/ctx-symbols/src/: ast.rs  conflicts.rs  main.rs  resolver.rs  search.rs  types.rs
plugin/tools/md-db/: VENDOR.md
scripts/: version-check.py
scripts/eval/: README.md  _extract.py  aggregate.py  grade.py  run-evals.sh  validate-suites.py
(+31 files in other folders)
