[package]
name = "ctx-symbols"
version = "0.2.0"
edition = "2021"
description = "Minimal AST symbol resolver for agentic-agile gates (count/locate/search/conflicts). Harvested from ctxconfig's code-intelligence layer."
license = "MIT"

[[bin]]
name = "ctx-symbols"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
walkdir = "2.4"
sha2 = "0.10"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"

[dev-dependencies]
tempfile = "=3.8.1"

[profile.release]
opt-level = 2
